--- a/kubernetes/apps/default/homepage/app/config/widgets.yaml
+++ b/kubernetes/apps/default/homepage/app/config/widgets.yaml
@@ -25,7 +25,7 @@
 #     units: metric
 #     cache: 5
 - sabnzbd:
-  url: http://sabnzbd.media.svc.cluster.local
+  url: https://sabnzbd.bigwang.org/
   key: 5uoxjbnyyl65i8446m6zsydgdwdf4zl2
 - datetime:
     text_size: xl
