--- a/kubernetes/apps/default/homepage/app/config/widgets.yaml
+++ b/kubernetes/apps/default/homepage/app/config/widgets.yaml
@@ -8,15 +8,23 @@
   text: "haroh!"
 - kubernetes:
     cluster:
-      cpu: true
-      label: cluster
-      memory: true
+      # Shows cluster-wide statistics
       show: true
+      # Shows the aggregate CPU stats
+      cpu: true
+      # Shows the aggregate memory stats
+      memory: true
+      # Shows a custom label
       showLabel: true
+      label: "cluster"
     nodes:
-      cpu: true
-      memory: true
+      # Shows node-specific statistics
       show: true
+      # Shows the CPU for each node
+      cpu: true
+      # Shows the memory for each node
+      memory: true
+      # Shows the label, which is always the node name
       showLabel: true
 # - openmeteo:
 #     label: Home
