--- a/kubernetes/apps/default/homepage/app/config/widgets.yaml
+++ b/kubernetes/apps/default/homepage/app/config/widgets.yaml
@@ -35,6 +35,6 @@
 - datetime:
     text_size: xl
     format:
-      dateStyle: long
+      dateStyle: short
       timeStyle: short
-      hourCycle: h23
+      hour12: true
