--- a/kubernetes/apps/default/homepage/app/config/settings.yaml
+++ b/kubernetes/apps/default/homepage/app/config/settings.yaml
@@ -3,18 +3,18 @@ title: Dashboard
 theme: dark
 color: slate
 headerStyle: clean
-layout:
-  Infrastructure:
-    style: row
-    columns: 4
-    icon: mdi-harddisk
-  Monitoring:
-    style: row
-    columns: 4
-    icon: mdi-chart-line
-  Services & Apps:
-    style: row
-    columns: 4
-  Cloud:
-    style: row
-    columns: 4
+# layout:
+#   Infrastructure:
+#     style: row
+#     columns: 4
+#     icon: mdi-harddisk
+#   Monitoring:
+#     style: row
+#     columns: 4
+#     icon: mdi-chart-line
+#   Services & Apps:
+#     style: row
+#     columns: 4
+#   Cloud:
+#     style: row
+#     columns: 4
