--- a/kubernetes/apps/default/homepage/app/config/widgets.yaml
+++ b/kubernetes/apps/default/homepage/app/config/widgets.yaml
@@ -1,11 +1,11 @@
 ---
 - search:
-  provider: [google]
-  focus: false
-  target: _blank
+    provider: [google, duckduckgo]
+    focus: false
+    target: _blank
 - greeting:
-  text_size: xl
-  text: "haroh!"
+    text_size: xl
+    text: "Howdy!"
 - kubernetes:
     cluster:
       # Shows cluster-wide statistics
