--- a/kubernetes/apps/kube-system/portainer/app/pvc.yaml
+++ b/kubernetes/apps/kube-system/portainer/app/pvc.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-bazarr-config
-  namespace: media
+  name: pv-portainer
+  namespace: kube-system
 spec:
   storageClassName: ""
   capacity:
@@ -13,18 +13,18 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.2
-    path: "/volume1/network-storage/bazarr"
+    path: "/volume1/network-storage/portainer"
     readOnly: false
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-bazarr-config
-  namespace: media
+  name: pvc-portainer
+  namespace: kube-system
 spec:
   accessModes:
     - ReadWriteMany
-  volumeName: pv-bazarr-config
+  volumeName: pv-portainer
   storageClassName: ""
   resources:
     requests:
