--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -1,25 +1,25 @@
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: traefik-middleware-authentik
-  namespace: networking
-spec:
-  forwardAuth:
-    address: http://authentik/outpost.goauthentik.io/auth/traefik
-    trustForwardHeader: true
-    authResponseHeaders:
-      - X-authentik-username
-      - X-authentik-groups
-      - X-authentik-email
-      - X-authentik-name
-      - X-authentik-uid
-      - X-authentik-jwt
-      - X-authentik-meta-jwks
-      - X-authentik-meta-outpost
-      - X-authentik-meta-provider
-      - X-authentik-meta-app
-      - X-authentik-meta-version
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: traefik-middleware-authentik
+#   namespace: networking
+# spec:
+#   forwardAuth:
+#     address: http://authentik/outpost.goauthentik.io/auth/traefik
+#     trustForwardHeader: true
+#     authResponseHeaders:
+#       - X-authentik-username
+#       - X-authentik-groups
+#       - X-authentik-email
+#       - X-authentik-name
+#       - X-authentik-uid
+#       - X-authentik-jwt
+#       - X-authentik-meta-jwks
+#       - X-authentik-meta-outpost
+#       - X-authentik-meta-provider
+#       - X-authentik-meta-app
+#       - X-authentik-meta-version
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
@@ -247,20 +247,19 @@ spec:
       - name: traefik-middleware-secure-headers
       - name: traefik-middleware-rate-limit
       - name: traefik-middleware-error-pages
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: traefik-middleware-chains-authentik
-  namespace: networking
-spec:
-  chain:
-    middlewares:
-      - name: traefik-middleware-redirect-https
-      - name: traefik-middleware-secure-headers
-      - name: traefik-middleware-rate-limit
-      - name: traefik-middleware-authentik
-
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: traefik-middleware-chains-authentik
+#   namespace: networking
+# spec:
+#   chain:
+#     middlewares:
+#       - name: traefik-middleware-redirect-https
+#       - name: traefik-middleware-secure-headers
+#       - name: traefik-middleware-rate-limit
+#       - name: traefik-middleware-authentik
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
@@ -277,20 +276,20 @@ spec:
       # - name: traefik-middleware-cloudflare-ips
       - name: traefik-middleware-authelia
       - name: traefik-middleware-error-pages
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: traefik-middleware-chains-authentik-plex
-  namespace: networking
-spec:
-  chain:
-    middlewares:
-      - name: traefik-middleware-rate-limit
-      - name: traefik-middleware-redirect-https
-      - name: traefik-middleware-plex-addprefix
-      - name: traefik-middleware-secure-headers
-      - name: traefik-middleware-authentik
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: traefik-middleware-chains-authentik-plex
+#   namespace: networking
+# spec:
+#   chain:
+#     middlewares:
+#       - name: traefik-middleware-rate-limit
+#       - name: traefik-middleware-redirect-https
+#       - name: traefik-middleware-plex-addprefix
+#       - name: traefik-middleware-secure-headers
+#       - name: traefik-middleware-authentik
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
