--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -34,7 +34,11 @@ spec:
       enabled: true
       isDefault: false
       persistence:
-        storageClass: nfs-client
+        enabled: true
+        existingClaim: pvc-loki
+
+      # persistence:
+      #   storageClass: nfs-client
         # enabled: true
         # existingClaim: pvc-loki
       # persistence:
