--- a/kubernetes/apps/networking/k8s-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/k8s-gateway/app/helmrelease.yaml
@@ -1,36 +1,141 @@
 ---
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: k8s-gateway
+  name: &app k8s-gateway
   namespace: networking
 spec:
-  interval: 15m
+  interval: 30m
   chart:
     spec:
-      chart: k8s-gateway
-      version: 2.0.0
+      chart: app-template
+      version: 1.5.1
       sourceRef:
         kind: HelmRepository
-        name: k8s-gateway
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 15m
+  maxHistory: 3
   install:
     createNamespace: true
     remediation:
-      retries: 5
+      retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
-  dependsOn:
-    - name: metallb
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
-    fullnameOverride: k8s-gateway
-    domain: "${SECRET_DOMAIN}"
-    ttl: 1
-    service:
-      type: LoadBalancer
-      port: 53
+    controller:
+      replicas: 2
+      strategy: RollingUpdate
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "${METALLB_K8S_GATEWAY_ADDR}"
-      externalTrafficPolicy: Local
+        reloader.stakater.com/auto: "true"
+    image:
+      repository: quay.io/oriedge/k8s_gateway
+      tag: v0.3.4
+    args: ["-conf", "/etc/coredns/Corefile"]
+    service:
+      main:
+        ports:
+          http:
+            enabled: false
+          metrics:
+            enabled: true
+            port: 9153
+      dns:
+        enabled: true
+        type: ClusterIP
+        externalTrafficPolicy: ""
+        clusterIP: "${METALLB_K8S_GATEWAY_ADDR}"
+        ports:
+          dns-tcp:
+            enabled: true
+            port: 53
+            targetPort: 1053
+            protocol: TCP
+          dns-udp:
+            enabled: true
+            port: 53
+            targetPort: 1053
+            protocol: UDP
+    serviceMonitor:
+      main:
+        enabled: true
+        endpoints:
+          - port: metrics
+            scheme: http
+            path: /metrics
+            interval: 1m
+            scrapeTimeout: 10s
+    probes:
+      readiness:
+        custom: true
+        spec:
+          httpGet:
+            path: /ready
+            port: 8181
+      liveness:
+        custom: true
+        spec:
+          httpGet:
+            path: /health
+            port: 8080
+      startup:
+        enabled: false
+    serviceAccount:
+      create: true
+      name: *app
+    persistence:
+      config:
+        enabled: true
+        type: configMap
+        name: k8s-gateway-configmap
+        mountPath: /etc/coredns/Corefile
+        subPath: Corefile
+        readOnly: true
+    topologySpreadConstraints:
+      - maxSkew: 1
+        topologyKey: kubernetes.io/hostname
+        whenUnsatisfiable: DoNotSchedule
+        labelSelector:
+          matchLabels:
+            app.kubernetes.io/name: *app
+
+
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: k8s-gateway
+#   namespace: networking
+# spec:
+#   interval: 15m
+#   chart:
+#     spec:
+#       chart: k8s-gateway
+#       version: 2.0.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: k8s-gateway
+#         namespace: flux-system
+#       interval: 15m
+#   install:
+#     createNamespace: true
+#     remediation:
+#       retries: 5
+#   upgrade:
+#     remediation:
+#       retries: 5
+#   dependsOn:
+#     - name: metallb
+#   values:
+#     fullnameOverride: k8s-gateway
+#     domain: "${SECRET_DOMAIN}"
+#     ttl: 1
+#     service:
+#       type: LoadBalancer
+#       port: 53
+#       annotations:
+#         metallb.universe.tf/loadBalancerIPs: "${METALLB_K8S_GATEWAY_ADDR}"
+#       externalTrafficPolicy: Local
