--- a/kubernetes/apps/networking/k8s-gateway/ks.yaml
+++ b/kubernetes/apps/networking/k8s-gateway/ks.yaml
@@ -7,9 +7,9 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  dependsOn:
-    - name: cluster-apps-metallb
-    - name: cluster-apps-metallb-config
+  # dependsOn:
+  #   - name: cluster-apps-metallb
+  #   - name: cluster-apps-metallb-config
   path: ./kubernetes/apps/networking/k8s-gateway/app
   prune: true
   sourceRef:
