--- a/kubernetes/apps/networking/k8s-gateway/ks.yaml
+++ b/kubernetes/apps/networking/k8s-gateway/ks.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 metadata:
   name: cluster-apps-k8s-gateway
   namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
+  # labels:
+  #   substitution.flux.home.arpa/enabled: "true"
 spec:
   # dependsOn:
   #   - name: cluster-apps-metallb
