--- a/kubernetes/apps/networking/k8s-gateway/ks.yaml
+++ b/kubernetes/apps/networking/k8s-gateway/ks.yaml
@@ -4,22 +4,15 @@ kind: Kustomization
 metadata:
   name: cluster-apps-k8s-gateway
   namespace: flux-system
-  # labels:
-  #   substitution.flux.home.arpa/enabled: "true"
 spec:
-  # dependsOn:
-  #   - name: cluster-apps-metallb
-  #   - name: cluster-apps-metallb-config
+  dependsOn:
+    - name: cluster-apps-metallb-config
   path: ./kubernetes/apps/networking/k8s-gateway/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-      kind: HelmRelease
-      name: k8s-gateway
-      namespace: networking
+  wait: false # no flux ks dependents
   interval: 30m
   retryInterval: 1m
-  timeout: 3m
+  timeout: 5m
