--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -11,7 +11,8 @@ spec:
     spec:
       #test
       chart: traefik
-      version: 22.1.0
+      #version: 22.1.0
+      version: 23.0.1
       interval: 5m
       sourceRef:
         kind: HelmRepository
