--- a/kubernetes/apps/default/nginx/app/helm-release.yaml
+++ b/kubernetes/apps/default/nginx/app/helm-release.yaml
@@ -9,7 +9,8 @@ spec:
   chart:
     spec:
       chart: nginx
-      version: 13.2.21
+      #version: 13.2.21
+      version: 14.2.1
       sourceRef:
         kind: HelmRepository
         name: bitnami
