--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -9,7 +9,8 @@ spec:
   chart:
     spec:
       chart: grafana
-      version: 6.56.6
+      #version: 6.56.6
+      version: 6.58.4
       sourceRef:
         kind: HelmRepository
         name: grafana
