--- a/kubernetes/apps/media/youtubedl/app/helmrelease.yaml
+++ b/kubernetes/apps/media/youtubedl/app/helmrelease.yaml
@@ -1,74 +1,144 @@
+# https://github.com/Tzahi12345/YoutubeDL-Material/blob/master/docker-compose.yml
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: youtubedl-material
+  name: youtubedl
   namespace: media
 spec:
-  interval: 5m
+  interval: 15m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: youtubedl-material
-      version: 4.4.2
+      chart: app-template
+      version: 1.5.1
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s
         namespace: flux-system
-      interval: 5m
-
-  dependsOn:
-    - name: longhorn
-      namespace: storage
-
+      interval: 15m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
+    image:
+      repository: docker.io/tzahi12345/youtubedl-material
+      tag: latest
     env:
       TZ: "${TIMEZONE}"
-      UID: 1000
-      GID: 1001
-
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: "traefik"
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "youtube"
-          hajimari.io/group: "media"
-        hosts:
-          - host: &host "youtubedl.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
-
+      # ytdl_use_local_db: "false"
+      # write_ytdl_config: "true"
+      # ytdl_mongodb_connection_string:
+      #   valueFrom:
+      #     secretKeyRef:
+      #       name: youtubedl
+      #       key: MONGO_CONNECTION
     persistence:
-
-      config:
+      data:
         enabled: true
+        existingClaim: pvc-youtubedl
         mountPath: /app/appdata
-        size: 5Gi
+        #subPath: youtubedl
       media:
         enabled: true
-        type: custom
-        accessMode: ReadWriteMany
-        mountPath: /mnt/media
-        volumeSpec:
-          nfs:
-            server: ${NFS_ADDRESS}
-            path: ${NFS_MEDIA_PATH}
+        existingClaim: media
+        subPath:
+          - path: library/youtube/audio
+            mountPath: /app/audio
+          - path: library/youtube/video
+            mountPath: /app/video
+          - path: library/youtube/subscriptions
+            mountPath: /app/subscriptions
+          - path: library/youtube/users
+            mountPath: /app/users
+    service:
+      main:
+        ports:
+          http:
+            port: 17442
+    ingress:
+      enabled: true
+      ingressClassName: "traefik"
+      annotations:
+        hajimari.io/enable: "true"
+        hajimari.io/icon: "youtube"
+        external-dns.home.arpa/enabled: "true"
+        external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+        external-dns.alpha.kubernetes.io/hostname: ytd.${SECRET_DOMAIN}
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
+      hosts:
+        - "ytd.${SECRET_DOMAIN}"
+      tls:
+        - hosts:
+            - "ytd.${SECRET_DOMAIN}"
+          secretName: "ytd.${SECRET_DOMAIN}"
+    # ingress:
+    #   main:
+    #     enabled: true
+    #     ingressClassName: "nginx"
+    #     annotations:
+    #       forecastle.stakater.com/expose: "true"
+    #       forecastle.stakater.com/icon: youtube
+    #     hosts:
+    #       - host: &host "youtube.${PUBLIC_DOMAIN}"
+    #         paths:
+    #           - path: /
+    #             pathType: Prefix
+    #     tls:
+    #       - hosts:
+    #           - *host
 
-    # persistence:
-    #   config:
-    #     enabled: true
-    #     existingClaim: youtubedl-config-pvc
-    #     size: 2Gi
-    #   video:
-    #     enabled: true
-    #     storageClass: youtube-dl-storage-class
-    #     accessMode: ReadWriteOnce
-    #     size: 300Gi
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: youtubedl-mongo
+#   namespace: media
+# spec:
+#   interval: 15m
+#   chart:
+#     spec:
+#       chart: app-template
+#       version: 1.5.1
+#       interval: 15m
+#       sourceRef:
+#         kind: HelmRepository
+#         name: bjw-s
+#         namespace: flux-system
+#   values:
+#     controller:
+#       strategy: RollingUpdate
+#     image:
+#       repository: docker.io/library/mongo
+#       tag: latest
+#     env:
+#       MONGO_INITDB_ROOT_USERNAME:
+#         valueFrom:
+#           secretKeyRef:
+#             name: youtubedl
+#             key: MONGO_USERNAME
+#       MONGO_INITDB_ROOT_PASSWORD:
+#         valueFrom:
+#           secretKeyRef:
+#             name: youtubedl
+#             key: MONGO_PASSWORD
+#     podSecurityContext:
+#       runAsUser: "${SECURITY_CONTEXT_RUN_AS_USER}"
+#       runAsGroup: "${SECURITY_CONTEXT_RUN_AS_GROUP}"
+#       fsGroup: "${SECURITY_CONTEXT_FS_GROUP}"
+#     persistence:
+#       data:
+#         enabled: true
+#         mountPath: /data/db
+#         existingClaim: appdata
+#         subPath: youtubedl_mongo
+#     service:
+#       main:
+#         ports:
+#           http:
+#             port: 27017
