--- a/kubernetes/apps/kube-system/storage/app/pvc-youtube.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvc-youtube.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-tv
+  name: pvc-youtube
   namespace: media
 spec:
   accessModes:
