--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./hajimari/ks.yaml
   - ./weave-gitops/ks.yaml
   - ./whoami/ks.yaml
-  - ./filebrowser/ks.yaml
+  #- ./filebrowser/ks.yaml
   - ./homepage/ks.yaml
   - ./nginx/ks.yaml
   # - ./plex/ks.yaml
