--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./bazarr/ks.yaml
-  - ./sabnzbd/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./youtubedl/ks.yaml
   - ./nzbhydra/ks.yaml
+  - ./radarr/ks.yaml
+  #- ./sabnzbd/ks.yaml
+  - ./sonarr/ks.yaml
+  - ./youtubedl/ks.yaml
