--- a/kubernetes/apps/monitoring/vpa/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vpa/app/helmrelease.yaml
@@ -29,7 +29,8 @@ spec:
     recommender:
       enabled: true
       image:
-        repository: k8s.gcr.io/autoscaling/vpa-recommender
+        #repository: k8s.gcr.io/autoscaling/vpa-recommender
+        repository: registry.k8s.io/autoscaling/vpa-recommender
         tag: 0.14.0
       resources:
         requests:
