--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -9,7 +9,8 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 45.7.1
+      version: 48.3.1
+      #version: 45.7.1
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
