--- a/kubernetes/apps/default/pg/pgadmin/helm-release.yaml
+++ b/kubernetes/apps/default/pg/pgadmin/helm-release.yaml
@@ -9,7 +9,8 @@ spec:
   chart:
     spec:
       chart: pgadmin4
-      version: 1.14.4
+      #version: 1.14.4
+      version: 1.15.4
       sourceRef:
         kind: HelmRepository
         name: runix
