--- a/kubernetes/apps/default/pg/pgadmin/helm-release.yaml
+++ b/kubernetes/apps/default/pg/pgadmin/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
   values:
     image:
       repository: dpage/pgadmin4
-      tag: "6.19"
+      tag: "latest"
     strategy:
       type: RollingUpdate
     env:
