--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./kubernetes-dashboard/ks.yaml
+ # - ./kubernetes-dashboard/ks.yaml
   - ./goldilocks/ks.yaml
   - ./influxdb/ks.yaml
   - ./vpa/ks.yaml
