--- a/kubernetes/apps/networking/traefik/ks.yaml
+++ b/kubernetes/apps/networking/traefik/ks.yaml
@@ -40,10 +40,15 @@ spec:
     name: home-kubernetes
   # dependsOn:
   #   - name: cluster-apps-ingress-traefik
+  # healthChecks:
+  #   - apiVersion: traefik.containo.us/v1alpha1
+  #     kind: TLSStore
+  #     name: default
+  #     namespace: networking
   healthChecks:
-    - apiVersion: traefik.containo.us/v1alpha1
-      kind: TLSStore
-      name: default
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: traefik
       namespace: networking
   prune: true
   wait: true
