--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./namespace.yaml
   - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
-  - ./traefik/ks.yaml
+  #- ./traefik/ks.yaml
   # - ./authentik/ks.yaml
   - ./metallb/ks.yaml
   - ./authelia/ks.yaml
