--- a/kubernetes/apps/networking/external-dns/app/kustomization.yaml
+++ b/kubernetes/apps/networking/external-dns/app/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
+  - ./dns-endpoint-crd.yaml
   - ./secret.sops.yaml
   - ./helmrelease.yaml
