external  ddns update

--- a/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
@@ -52,9 +52,10 @@ spec:
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
+      - --zone-id-filter=399537a1da4ab599fac7bf35849ee71f
 
-    # txtPrefix: k8s.
-    #txtOwnerId: ""
+    txtPrefix: k8s.
+    txtOwnerId: "lab"
     domainFilters:
       - "${SECRET_DOMAIN}"
     serviceMonitor:
