--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -108,8 +108,10 @@ spec:
       - --metrics.prometheus.entryPoint=metrics
     additionalArguments:
       - --log.level=DEBUG
+      - --log.format=json
       #- --log.filePath=/data/traefik/logs/traefik.log
       - --accessLog=true
+      - --accesslog.format=json
       #- --accesslog.filepath=/data/traefik/logs/access.log
       - --accesslog.fields.defaultmode=keep
       - --accesslog.fields.headers.defaultmode=keep
