--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - ./bazarr/ks.yaml
   - ./nzbhydra/ks.yaml
   - ./radarr/ks.yaml
-  - ./sabnzbd/ks.yaml
+  #- ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
