--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./nzbhydra/ks.yaml
   - ./radarr/ks.yaml
   #- ./sabnzbd/ks.yaml
-  - ./sonarr/ks.yaml
+ # - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
