--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./bazarr/ks.yaml
-  - ./nzbhydra/ks.yaml
+ # - ./bazarr/ks.yaml
+ # - ./nzbhydra/ks.yaml
   #- ./radarr/ks.yaml
   #- ./sabnzbd/ks.yaml
  # - ./sonarr/ks.yaml
-  - ./youtubedl/ks.yaml
+ # - ./youtubedl/ks.yaml
