--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -3,12 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./cloudflare-ddns/ks.yaml
+ # - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
-  - ./traefik/ks.yaml
+#  - ./traefik/ks.yaml
   # - ./authentik/ks.yaml
   - ./metallb/ks.yaml
-  - ./authelia/ks.yaml
+  #- ./authelia/ks.yaml
   #- ./k8s-gateway/ks.yaml
   #- ./traefik-forward-auth/ks.yaml
   #- wildcard-certificate
