--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:qA079fCz6nuFhERBSMag8JLE7wJrf6uAkDrwzVLmDyhGGuFn72HO+6WOc/7xDuRYU0Dtmwnl1cOMDo37,iv:nyZp4iZishuN7Y5J6LVkYF+UORwRaI+WvUkAtLyQthQ=,tag:3XLbBWk2mTKUaPS2+s8M4g==,type:str]
-    username: ENC[AES256_GCM,data:C+ROWms=,iv:++DH7zCxV3DJDefqOpeoG/Bpqpd5Zpvo/c42v1Aia7s=,tag:prA8Xc0GWL9LYGXBMT0AQg==,type:str]
+    password: ENC[AES256_GCM,data:WxiTFDlCSlq1wffM2RPNL6jEhEco/7LayOMQuFQ0AULCIThaSgo2t7AOEHELMXn5DBZNxuwe2dj1odyi,iv:ZLeNXXvmkYhNjEKK4wKoZdGknAWj9afsglhiq3b0SIA=,tag:vptXU4I+43wNJ5TMFV1d6w==,type:str]
+    username: ENC[AES256_GCM,data:1spFyWI=,iv:vc0suKl9ucFnDLnvyRk8V9DWP1nlrpBqnYygT239ySE=,tag:Lbtkkt/Gobnyp6NTSln/dw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5UDlPWDBRWU5BL1d0aTh5
-            ZTZsSUNXUm95ZFZVWEhZeXVpU1RRVjNvM1FRCmRSbnlHTW1udFIwaVlieVB0ZUlz
-            ZjZmSDQrSVo3TGZMeDVUVW1lYzZqRkkKLS0tIEx3eU1Cc092SmRpZjdwWi9qcmZl
-            RlNBSmVDTUZMNWFiMHh3c1lNbEdIYVkKC3vK0FsuuGOMCf+3kUJA0K+b0jqDOpJG
-            EsMQ9KKfAeAZgnvnaZO6Sxy9tQSjXndCU2ZIYmU9lKVTAIsgSOvNWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtUWFGZVFkZ1NPdlBwUFo1
+            V1V1Q3NYTXZ6OHFCMjIvOHMrSUhqY205UG1ZCkVWVUN4bU05czNpdEdGSGtVdjNJ
+            UzIvTFlqUW16RDV2WW5LUGNzcWhzbW8KLS0tIFYvV2ROelRLSWQ5NnhrTW8yRTR1
+            OUFITnkyNDlqTE5EeTd2SmhZdjZmN00KHyZvdOm/DVOaYo6kBHPm6ALhvFFA2CdL
+            g0ZVaYkeFRouVwWUm7IIBSxsPus55TOHAr73Eiya/1RclE4WT9wi0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-25T23:19:21Z"
-    mac: ENC[AES256_GCM,data:3pr46l8+Aykp/grtF+35GD+M/lP4h9F+oOeNio/Z58bBKu0EmuqbjO4c0Lxq+f2N+fC2o45IIQYT2j5fH6f4eC3N3zYo9TAPazcnO1BRlFNZALYp1QK58STo04bnFVBRrtIg32jaRKIowJusBadSvCuQip0L8umG0F8oKR3uRa8=,iv:m3G0sw2weQBT9OXoWALV4JUhPkp4jigWb4YwAT4iRqE=,tag:2t0gsF/sO7kwbwueYwy3Kg==,type:str]
+    lastmodified: "2023-08-26T20:26:32Z"
+    mac: ENC[AES256_GCM,data:062r9sG9nPNC7mLQGdw4kPOpDoQO0OeplrmrUH80lnGC7oT7XrrxkPDC/6UShFE2we0v1M8iW6v9zhi0Gaxmn5172zWH+cPAhPLmKtNFxASJnPBuV8OdVFqQyYI2sfTMSb3YFBEimt+zoMmoFJJ4ZxxRwhaSRaJqjOTyx6Jvds8=,iv:TvnsnMpADq2xourTKBqo5Q7o3E+JoObdTJvQBzX5Y28=,tag:aRRz3+6SGkwxDcpl0YIAFA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
