--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:Pq4lt982ll6uN7fT,iv:uYw/JdAh9AcOsHpZt2m7yM1dLyeI87CNHx3RODExiKM=,tag:AnDwKhiQ4xib462C9aONgQ==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:S8MTWrjGiu6t6Tgw,iv:5jlAf00jsm3m5XgwHoOK9FgkstBBO4h/mlXWoTXJI60=,tag:y5EKEgduhCORKTRbSFJ12Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVUDhibVNKQlNBcXRkWUpU
-            VHdlb0pDbk8zM0pTY21Wd0MyVVJkUUt6ejFBClhRZlBjMTZwWXd1VllTZTdsNVdZ
-            THVIc2hqbHh5cXJmaDVIbnNQVGNWSGMKLS0tIEo1dllmcHlpMUljWmR0OVJWNmpp
-            RVQwL2Rkb3I4T1ZZZFA4amJHbW1vZkkK7dIV3wHH8zNSyDqrBSAPzTpqH13buC+4
-            TDtyxUU2Zx6BkY+yobfo3/gurR9eHUMvgDih6pEjXyGGwMxss7LOIw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHb01mdW1PMmV0bitRNU5q
+            TVg4NGh6NnBzWndqVVJQSGlMeTNUKzFCdDBJCmlXb1huY2phYituMnpuTlNqSEw5
+            dW00YTkrcXNoRzJGN0ZYeWRYTm9NMmMKLS0tIEQ2eGxLVmsveVBheEN3OEpHL2Jx
+            RHVGWEQvaVhIRUd3SjlxZ2UyU3JIOEEKoDwNEilvCh/TeYbdbN6ZMrZTifhjf1ZS
+            hMaDJZveUu/dplE/wNJUS0SHbT+4GqZVHPMBI+HxNGhDO62HUckUBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-25T23:19:12Z"
-    mac: ENC[AES256_GCM,data:My7Kcrpq5goz6CejOwqrufiQKnywpi0oDbNNf2Jlo+4cWJemGT6XHD1E5mIXYlvkr5FuuH1xdmZj30+Ud3t6Og68AdOJ1EbmI/39DiNWrwONB6D8DT02qRnaVvw1Cay+KJrs1b8hCnGO1ZnL5XiA+rIn8ciVukwU5dyjp1OSNmk=,iv:KhcMpmZtkrGYXtMOxAnXrM9xPU+oVROWgpxO1Sk8+oM=,tag:1GcsQoxNX1R03SkgHvQreg==,type:str]
+    lastmodified: "2023-08-26T20:26:22Z"
+    mac: ENC[AES256_GCM,data:ZfllK+OV7MGmnAAO7hSy9Q7HRRB7VYh4izFl+CQ0rWVLmfB8Y4KWacsEO7jMoB1Tu1Wxa+8iAEFpQjUkTm7v7zxtepD54XomG6DQIL2Fw1Bb+hGHMnDlwwpZa8HckrkCoKAlM74WibA0Tgg8yDX8QgnLAhYqntYVluUSDPMDurg=,iv:YzRikdGAntvjtF6rwZ5ff2z5uJ6COKS/tgjQH/xq3Mk=,tag:ncxN65/cbMr92NMCwnPPpQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
