--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:7T3t+xhZ/m85QGKzjKwbbai3Q3gl,iv:T5nUaxqMfa0xsCR3n/eJsIXySuOHRH4rSx97ENGcYzo=,tag:AccstkJvubMV2Cc03yVeiQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:mdLSrgCmlFVfKkYBkzZYHXXvxN09RyLmSeh6XUAq/gszDDwo,iv:ufIyZqrITYW4JeCqQs1FZaqGSHG96goSNERPeADTHi8=,tag:ins5/f44a8wIwMRfa8Wbqw==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:f50U7IX5dir3gmM9Pw==,iv:vFYk9xs1ABGVMtSsxawV5as+M/c3rIs+LQiHQjU5h40=,tag:ayvH4nsdUW5BkxAgJ3INnA==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:VCzadjSqIbmQwqs=,iv:6c82t+CFtuzOqHQlzWeZ52+Fb2M+D0+o9lJ5227FGRQ=,tag:8dIFEqkdF4HlNdd967JeHw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:cYdsifpws9khqrf7M7tf8InUylwK,iv:YXg8dMZWjmdmQgw7fk8HMT2Yj1qNdRj2cYPxNG6SBaM=,tag:bu/E4oaV2dLERRDMQLUruA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ZlLK/wi5XjlTBmzs9DBPQiTTvHPPLWa/rDpTmxw7E7IBoM5I,iv:5/5rPOWhxjfcHc39Fv6JoHBuXY4qB6tqWzGLoyX1xcs=,tag:3NqmDIPK8qS0njFD3WPGnQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:d/uTw2iSlova357BdQ==,iv:kRCE2IQooBD0p2qBs4nu/42JWZ72hvxk515kRrG5WBk=,tag:tn89g6WpvTCKGpqg64fDLw==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:me9M4ra3PJua+KI=,iv:WTwDBUAqamQV/R3op+J7cmcHFRu5m1g98ae0lpQtpu0=,tag:EZ3Ioe7eQHQ3a47gvppfnA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIRUxKaDZIenNXSDhpZzEw
-            a250M1YyN2hIMjRqOGZpMGtQZWhsaWFRc0R3CnJFYkJOVEprL0dWbmNTdVRmZis3
-            UWRPTThkWEpSN3ZTb1FOTUVXbEdjWmMKLS0tIEFXNE8wV1ZpVy9zbTZjL1UrYzcz
-            OUFQckJXMjBRUHlKN3VYWk5RUHFVVncKTlhTuEq22/vEnfomNxO/1G+eCWOTyAMY
-            FMwJrYyvczCR6/mTC/krSa2jx46gjNXtg91kICI88DPeX/lJP6deiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5dm9LWXMxMnYrTkx0ZExN
+            Z0cvSzRGZ3h1WjJzbmFrZGpCYWRkVStsUVdNCjkzUktEcmhUOGhOM09EbCthM3JP
+            Z1c5eWl0YVhFZ24wU3ZhSk9KYkhEQkkKLS0tIHIxT3BrNlFMWVNuR3NIN3MyR3h5
+            QW5TQ3doRWhpTHZuSW11WkpLU1cxd3cKvyGdjR2x2KHxYO7jxacQ3jXY8ueyHWVZ
+            v/k2PhntC8IUoZS0CsRVhzG+rXTON7i5wd2wSb6NsRBQYUb/tXWbBg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-25T23:19:12Z"
-    mac: ENC[AES256_GCM,data:wwW3edNTxFxo0vtNppImrySYk6mAgNXBKwunCvgdHp5d9SmveGSBobVQsheXhwFfwnafBvS2PkhRcUnvHsXmDHnPeFG+m/Diui5mxPx+vcdce3Y2IMaLdC9OHLYSPGJ2yFR0ENSSBxVQdxpoVcDuZss/tg2qA+UAGcBfdcm550Y=,iv:bSnWCanj6D+o8pu5QhmwpK/vH9U8zzFrn05f7vrBdag=,tag:VJilMPqiNgX9WIv4AR1Y8Q==,type:str]
+    lastmodified: "2023-08-26T20:26:23Z"
+    mac: ENC[AES256_GCM,data:odQaNQ2XXLyKY5cesUI5EhWiNteVe6yjk4bRgJAiGGqS0f/CI7PphaA1GqqgiBYrJP0IX11BG3SEgdciSXr2ct5ed0NlyUw8LIvAFOX4DBNOH6ibXe+3yrS6YaCY/IsRiIfSaozm+Ct7/1GSWwePLhINQGvLV+A+ZDGxiexHGWw=,iv:gSMuQXo8fiJ8rZ21Mi6i6fVHNDxt6pC7V9PX+uIMQsg=,tag:1igvaYYVXS1RquxmJ9PO9g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
