--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:WxiTFDlCSlq1wffM2RPNL6jEhEco/7LayOMQuFQ0AULCIThaSgo2t7AOEHELMXn5DBZNxuwe2dj1odyi,iv:ZLeNXXvmkYhNjEKK4wKoZdGknAWj9afsglhiq3b0SIA=,tag:vptXU4I+43wNJ5TMFV1d6w==,type:str]
-    username: ENC[AES256_GCM,data:1spFyWI=,iv:vc0suKl9ucFnDLnvyRk8V9DWP1nlrpBqnYygT239ySE=,tag:Lbtkkt/Gobnyp6NTSln/dw==,type:str]
+    password: ENC[AES256_GCM,data:8Fo/yHD4yPhErZvBzMF/E/hrDaKAMdDthIu1dCI03varpwFi2UF+lPDzYswOYwmHoI+Dv1goHJ7UEI5h,iv:UovJpPhLxnYZqnbIUFPgk9uUImUxBNxn4KdcfSWdsj0=,tag:ym22J8tOz58+zZbOFBukjA==,type:str]
+    username: ENC[AES256_GCM,data:hub2PHM=,iv:TL51eXTeB4esSZ4s6wMzemp3eV3CHbXWDZsa98NUvrQ=,tag:Hd8H46sdDM+diMnSaH3KJw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtUWFGZVFkZ1NPdlBwUFo1
-            V1V1Q3NYTXZ6OHFCMjIvOHMrSUhqY205UG1ZCkVWVUN4bU05czNpdEdGSGtVdjNJ
-            UzIvTFlqUW16RDV2WW5LUGNzcWhzbW8KLS0tIFYvV2ROelRLSWQ5NnhrTW8yRTR1
-            OUFITnkyNDlqTE5EeTd2SmhZdjZmN00KHyZvdOm/DVOaYo6kBHPm6ALhvFFA2CdL
-            g0ZVaYkeFRouVwWUm7IIBSxsPus55TOHAr73Eiya/1RclE4WT9wi0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTTkxdEZNUVNxYlc5N1pC
+            cGJOa2txQjZlQ1Z2dktiaEtna2Z1bTdyS0RvCnJDUlVSMUhhL3NnQk1LRkJ0UXZX
+            UE1yaXlQWlJxYkhMbTFjZHBvbThjaE0KLS0tIDhFMXhxUG1PbW1wTVZIRktWZnVu
+            Q0FyVFFwR1RJNFo2eU9POUNscllkT3cKkn5tyLatuGgt7Jx9qr42y0UoUcfsAj0K
+            JSFubN82AEYSWYRt6zYcGsK9OO5G4EeOu+YHJLrbyCbuE9AYVUFLqA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:26:32Z"
-    mac: ENC[AES256_GCM,data:062r9sG9nPNC7mLQGdw4kPOpDoQO0OeplrmrUH80lnGC7oT7XrrxkPDC/6UShFE2we0v1M8iW6v9zhi0Gaxmn5172zWH+cPAhPLmKtNFxASJnPBuV8OdVFqQyYI2sfTMSb3YFBEimt+zoMmoFJJ4ZxxRwhaSRaJqjOTyx6Jvds8=,iv:TvnsnMpADq2xourTKBqo5Q7o3E+JoObdTJvQBzX5Y28=,tag:aRRz3+6SGkwxDcpl0YIAFA==,type:str]
+    lastmodified: "2023-08-26T20:54:03Z"
+    mac: ENC[AES256_GCM,data:ubkYhLbvbulA0wRbjHFswquZIuwUa1J0FXyzH0n5unMbXzm5oYRfDwSBLIFUr+pVEDR0k4G/sYPknv7QucGBR4bmjPlcojrTZm8YRFMclAcrf5ubcbHmLbGiWU9mb3VqdtWw6SlJe7i3Ug7HlVLRNnYQCEgFktbymjoyAIByAjc=,iv:aNa4Fi0zbuwvSRHAAbR9xtIvm4/sSph50EddhGfBFno=,tag:oRgIWHZh5yFKIZ7vE2Ho4Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
