--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:S8MTWrjGiu6t6Tgw,iv:5jlAf00jsm3m5XgwHoOK9FgkstBBO4h/mlXWoTXJI60=,tag:y5EKEgduhCORKTRbSFJ12Q==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:GUYin2wCBMDGzrNq,iv:LzQArJOl+fESeNf8MdB2x6cz29aFekSHqDA0PO5BFcM=,tag:NMZ+/0PgZ7eq4wcin5pQEw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHb01mdW1PMmV0bitRNU5q
-            TVg4NGh6NnBzWndqVVJQSGlMeTNUKzFCdDBJCmlXb1huY2phYituMnpuTlNqSEw5
-            dW00YTkrcXNoRzJGN0ZYeWRYTm9NMmMKLS0tIEQ2eGxLVmsveVBheEN3OEpHL2Jx
-            RHVGWEQvaVhIRUd3SjlxZ2UyU3JIOEEKoDwNEilvCh/TeYbdbN6ZMrZTifhjf1ZS
-            hMaDJZveUu/dplE/wNJUS0SHbT+4GqZVHPMBI+HxNGhDO62HUckUBQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1S0tRclJuUnNsZHhnN2FD
+            OVJPSUZOUTQyeVVzdndSaU9IME9GTm1LWDBBCmI5REE2TzBOSHlqMzJiY3pqbXc1
+            ZnR2VGdhMnZJV0JTMlN4WFU3TXFrZkkKLS0tIElDY1Jjc2JOcWxUY2VQSEJlUEJQ
+            VVB0MHB6L3MrazJkWDJ4MnlOU2Y4Q1UKLcagvwW6aeIEtWaWWjSzAU03Z6Par09T
+            jF0jeabIeNhtGijXY9gEYvYHgrvfk5RqVnU0atb/WGnPYzNg9Z8sTA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:26:22Z"
-    mac: ENC[AES256_GCM,data:ZfllK+OV7MGmnAAO7hSy9Q7HRRB7VYh4izFl+CQ0rWVLmfB8Y4KWacsEO7jMoB1Tu1Wxa+8iAEFpQjUkTm7v7zxtepD54XomG6DQIL2Fw1Bb+hGHMnDlwwpZa8HckrkCoKAlM74WibA0Tgg8yDX8QgnLAhYqntYVluUSDPMDurg=,iv:YzRikdGAntvjtF6rwZ5ff2z5uJ6COKS/tgjQH/xq3Mk=,tag:ncxN65/cbMr92NMCwnPPpQ==,type:str]
+    lastmodified: "2023-08-26T20:53:57Z"
+    mac: ENC[AES256_GCM,data:f/SshIK8hYYG+07y/56thyIzOP4D/nD93TPcS+PDsDWkbKrNHgXsnzT3e+nQEce/vCd21WM0X7MrqMv//mjR4q2WX+5zkOHLWKoj7BtOQn3B5u+ZRJLYNwq9yV+T+ypAaM60G8JUfc6sewfArRifBbOlXeNae8lxZuW6AmQnbQ0=,iv:VLACXmvkc3U5uxah9trxe2ceymAgxhS7ncv5Ae18dCY=,tag:+xCW63xB6PMEqjgXc50wrA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
