--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:cYdsifpws9khqrf7M7tf8InUylwK,iv:YXg8dMZWjmdmQgw7fk8HMT2Yj1qNdRj2cYPxNG6SBaM=,tag:bu/E4oaV2dLERRDMQLUruA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ZlLK/wi5XjlTBmzs9DBPQiTTvHPPLWa/rDpTmxw7E7IBoM5I,iv:5/5rPOWhxjfcHc39Fv6JoHBuXY4qB6tqWzGLoyX1xcs=,tag:3NqmDIPK8qS0njFD3WPGnQ==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:d/uTw2iSlova357BdQ==,iv:kRCE2IQooBD0p2qBs4nu/42JWZ72hvxk515kRrG5WBk=,tag:tn89g6WpvTCKGpqg64fDLw==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:me9M4ra3PJua+KI=,iv:WTwDBUAqamQV/R3op+J7cmcHFRu5m1g98ae0lpQtpu0=,tag:EZ3Ioe7eQHQ3a47gvppfnA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:2EdiE5t9SwnoWG9m2ld/AclXsNlg,iv:vPtufRQfFX170mQfgDrvOSa3Gq465S0V/3lo7/Oq9VU=,tag:OwfqHfVf1VncHFKXUCAgKA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:xmcOaOtsJqt7Lhi9b6Fw6M8V3MO4lJq1VJ44VCzaje5g0AYf,iv:3KXRIgs9wqpJN+Ez/VekmNwtmqJTsBACSsAg7T8b4hc=,tag:ox+Un5fN002pDOCDKzSD0w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:JJtaWMJxsA0awDvKWw==,iv:WchioS7hZal4Zv3Q1pRyxtjoAW+3e04J/X97a6gdkjs=,tag:RF2Q0pviJt4o7n8cAZLsRA==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:QT9ifPJ+avXTAd8=,iv:wJ+DPKfRWjFatIrFfrzvYNOQcdEZblAWpXL1C5Zay2o=,tag:0Ms6NzSC7F+a4PA29koHww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5dm9LWXMxMnYrTkx0ZExN
-            Z0cvSzRGZ3h1WjJzbmFrZGpCYWRkVStsUVdNCjkzUktEcmhUOGhOM09EbCthM3JP
-            Z1c5eWl0YVhFZ24wU3ZhSk9KYkhEQkkKLS0tIHIxT3BrNlFMWVNuR3NIN3MyR3h5
-            QW5TQ3doRWhpTHZuSW11WkpLU1cxd3cKvyGdjR2x2KHxYO7jxacQ3jXY8ueyHWVZ
-            v/k2PhntC8IUoZS0CsRVhzG+rXTON7i5wd2wSb6NsRBQYUb/tXWbBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXNkh1ZERyV3FZR3FneW5j
+            WUpCYzJmNFRuc2I5SWNNVTNHTkdtQSswTTBzCkcrc29kcUZVdE1MZ0VSSDNVUnFH
+            ZHBDTThGbWRpOWk2cmR0KzhOTnRKUlEKLS0tIENHaXExUktqMVZZNy9ZblBoY1dt
+            anZRQTdCQUpYbnVWejBzVVUzMUcvZ28Ki87d8lfxYNXrYZdA7izYBOV9UtWsgdlI
+            2MlOZ5LCXGlm0XbQGD1K3OQ62d22q98Yv9/mP/ew4+1Ovfw2l+lKCQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:26:23Z"
-    mac: ENC[AES256_GCM,data:odQaNQ2XXLyKY5cesUI5EhWiNteVe6yjk4bRgJAiGGqS0f/CI7PphaA1GqqgiBYrJP0IX11BG3SEgdciSXr2ct5ed0NlyUw8LIvAFOX4DBNOH6ibXe+3yrS6YaCY/IsRiIfSaozm+Ct7/1GSWwePLhINQGvLV+A+ZDGxiexHGWw=,iv:gSMuQXo8fiJ8rZ21Mi6i6fVHNDxt6pC7V9PX+uIMQsg=,tag:1igvaYYVXS1RquxmJ9PO9g==,type:str]
+    lastmodified: "2023-08-26T20:53:58Z"
+    mac: ENC[AES256_GCM,data:1rCRHf3RgKsYvp7bs2RnIXR1BwL+3XA9LtibwaccO9eu8zGLa0KjZ/Bm6Uiacm2e2jETptm4ICdleWmnANM9/v91EMjTwZaP4/kx/fxTwJ5ynIhj8iqGRD44rilvUalBuHNNBxZ+TtSunheAd6ZVryklk/QHcdYR4pZKAECaZ4E=,iv:JMln/a+0YFjPWrgcknZpCIBhJ2HE+BV3gIMyt2bUYlg=,tag:uCnPsr9jBh85mDe1PTbv5g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
