--- a/kubernetes/apps/flux-system/addons/webhooks/github/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/addons/webhooks/github/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: github-webhook-token-secret
     namespace: flux-system
 stringData:
-    token: ""
+    token: ENC[AES256_GCM,data:UvJJFaMMEMWA0xyJOLD0yv3913HCZTf/,iv:rQ8AAKpC1P0hWTzfzNieMIC69IqDFLD7bn2PXakovjc=,tag:SrYX4lVPd8HQyRCRHIQ8ig==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudVdUajN4M0N6ellEMVJL
-            c2ZGQ2tQNnh0cVNUa1VDWnlZTW9LSVB1S1ZnCjRBV2kvRjNhblBCRkhNZkNvUkhk
-            RWphRENFMEpKYlVsV0J5bUtYQ2hFeEkKLS0tIFJsK1ZGWHkxRlVDNSthQmsvb3Qy
-            SkFPUVEySzNBQzNsOTBhNm90L0V6UFUKX7guPsDa0dFAfdoBHFlbdd0wzKZYYfbh
-            XrkCwARqNNToIiBVDQ8uJ2GabVj4KTnDoJlDE1jUY1rQA7DRreiwXg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvYjRHZTFZQ0tKZ0ttTkJ1
+            S1VrOGJ1QzdRWkVJWURWN0dwc2FKTXVQNUNNCmREWEpsVEV6ZG5xcHdmNHZpQU0x
+            TnRIUzRJdkR1L2dhYmQ3L0NIRUV2REUKLS0tIEdSbmVjNXZwU2VtTjhaQ0podEZu
+            MlQ3RnpvcXhVcVdnS0wwMElyM2NXQUUK+PwIg6C4iNsu6a0QHtfG00qg2McRpNjF
+            Ri9M5nVEQh9cWVEkY4q68qRhDmmUMch/6jJR1AUheG9LQ7oIVKgujg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:26:23Z"
-    mac: ENC[AES256_GCM,data:F/VbsGRaZtXpUVJde1mqetIo1zBH4T3BSyg1DUn9OcwA8C7/lZYemJuat8/0xc/4m0vZFn4V//Ax0s+ZOIJhQMG0qtlJq2niwWfp3bhL33H1UX5fxNOJEqd91gKnwVssA4PlNLzGXlvpCtTzBFu6N1t+9T6w/5tZB3PoTXyrE7g=,iv:6WX/WcUk8v2/xedgsM73Z3s18C0Vt/uNFIKX6TsxJTU=,tag:7r2Y1naa+tMv5DqdF022fg==,type:str]
+    lastmodified: "2023-08-26T20:53:58Z"
+    mac: ENC[AES256_GCM,data:gTcn1Rmys13YgQsn0I+tUPFnY7PNpacAiwk5BSOA8Si0okIT5azVOEAL6psHNmcfzqyvCJD/ff23823ln9tzo04wLHtuwkfS32eowajtVQnZ/1TovA2V0AW7FMcgDBMfNM/0cmKxZfgbHD6zbFeJAj2jCgVe6sAW2Fx/2Tw1tqo=,iv:qFFaf+vGuSpMQpqsgtKdQaPJjh+XfsqrT7LD40Rn1H8=,tag:PMkBb4eBbGN10dIY2BsMFw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
