--- a/kubernetes/apps/networking/nginx/internal/p.yaml
+++ b/kubernetes/apps/networking/nginx/internal/p.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: external-name
+  namespace: networking
   name: proxmox
 spec:
-  endpoints:
-  - addresses:
-      - 192.168.1.9
+  externalName: nuc11.lan
   ports:
   - name: https
     port: 8006
