--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:8Fo/yHD4yPhErZvBzMF/E/hrDaKAMdDthIu1dCI03varpwFi2UF+lPDzYswOYwmHoI+Dv1goHJ7UEI5h,iv:UovJpPhLxnYZqnbIUFPgk9uUImUxBNxn4KdcfSWdsj0=,tag:ym22J8tOz58+zZbOFBukjA==,type:str]
-    username: ENC[AES256_GCM,data:hub2PHM=,iv:TL51eXTeB4esSZ4s6wMzemp3eV3CHbXWDZsa98NUvrQ=,tag:Hd8H46sdDM+diMnSaH3KJw==,type:str]
+    password: ENC[AES256_GCM,data:VRQXxEcErePrLHHOfJ1XxPUJjvLPtjjLUc5QWq8YyElXFTBG6/oLmZCeDdnj4uJuczB7kR7YxIGHr+o/,iv:RWAzQY0VSkM/geOQA74XLvEKkeRH5yyjqGsPXP8Dskk=,tag:/tvstgMdTzZSjlby2IeEog==,type:str]
+    username: ENC[AES256_GCM,data:KNzbXIc=,iv:m9csej0/CCmUc0s9atCF1Iybn5oKudhDS/F1CBB1hCA=,tag:B2sNUxjU979leVbe6SlDLg==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTTkxdEZNUVNxYlc5N1pC
-            cGJOa2txQjZlQ1Z2dktiaEtna2Z1bTdyS0RvCnJDUlVSMUhhL3NnQk1LRkJ0UXZX
-            UE1yaXlQWlJxYkhMbTFjZHBvbThjaE0KLS0tIDhFMXhxUG1PbW1wTVZIRktWZnVu
-            Q0FyVFFwR1RJNFo2eU9POUNscllkT3cKkn5tyLatuGgt7Jx9qr42y0UoUcfsAj0K
-            JSFubN82AEYSWYRt6zYcGsK9OO5G4EeOu+YHJLrbyCbuE9AYVUFLqA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TXpiY3kyMjQxR20wV29p
+            QU5XY2d5RUJ4M2RSTWRSSXpHTGIyallGWHdnCkRKZWRFZllVeDhrK0FZcC94djhZ
+            cDZMZWJvZjFQMENFb0tERGJMRFdGcUUKLS0tIDRIaXJJYzJFVFI1d2tsa0pVUkRE
+            a3o3L0x2K0I2S3ArajRrOFNlUXJ0b1UKlfVN8t7aRa7PIJ7lG/F/G9N95Hb+6Xtu
+            KZ7K5JXchivXRf+Jg2O0VtTGPbYNB6m+wjgaMHgGQmAoZpHOoCtQEg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:54:03Z"
-    mac: ENC[AES256_GCM,data:ubkYhLbvbulA0wRbjHFswquZIuwUa1J0FXyzH0n5unMbXzm5oYRfDwSBLIFUr+pVEDR0k4G/sYPknv7QucGBR4bmjPlcojrTZm8YRFMclAcrf5ubcbHmLbGiWU9mb3VqdtWw6SlJe7i3Ug7HlVLRNnYQCEgFktbymjoyAIByAjc=,iv:aNa4Fi0zbuwvSRHAAbR9xtIvm4/sSph50EddhGfBFno=,tag:oRgIWHZh5yFKIZ7vE2Ho4Q==,type:str]
+    lastmodified: "2023-08-26T23:19:22Z"
+    mac: ENC[AES256_GCM,data:1qCNRq+1LasciZohhTyz2G93oYC5cWICrpZd6zbz+ik2YhDwJIprDDa/Poldr1m7YXDWXjsT7/E5NqfMMGavl+xSstQAZQ9sGpRB97ogpLfa89ug8b02+u+x76kKRqndEYLkEAkOqd6mRRD9nWOVSoF0qYUzmrt7XtkDN6C93XA=,iv:o0h49ziSL7VuDP7HpHMqGNdLZCxCojcOfieEWno9vxo=,tag:QnlB1LTfun6sanmySkECYA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
